fix footnote overlap

--- a/css/nysds-a11y.css
+++ b/css/nysds-a11y.css
@@ -97,7 +97,8 @@
 .nysds-a11y-footnote-return {
     margin: 2.5em;
     font-style: italic;
-    line-height: 4.5em;
+    line-height: 6em;
+   
 }
 
 .nysds-a11y-toc {
